--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "axios": "^1.7.7",
+    "compressing": "^1.10.1",
     "express-session": "^1.18.1",
     "multer": "1.4.5-lts.1",
     "reflect-metadata": "^0.2.0",
